css: fix table overflow

--- a/static/style.css
+++ b/static/style.css
@@ -258,6 +258,7 @@ a:hover {
   gap: 1rem;
   padding: 0.5rem;
   background: var(--light-gray);
+  overflow-x: auto;
 }
 
 .file-content {
